--- a/Dalyan.WebApi/Web.config
+++ b/Dalyan.WebApi/Web.config
@@ -7,10 +7,10 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,     log4net"/>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
   </configSections>
   <appSettings>
-    <add key="logPath" value="D:\Temp\Dalyan\Main\Dalyan.WebApi\Log\"/>
+    <add key="logPath" value="Log\"/>
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -22,10 +22,10 @@
   -->
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
-    <httpRuntime targetFramework="4.5.1"/>
+    <httpRuntime targetFramework="4.7.2"/>
   </system.web>
   <connectionStrings>
-    <add name="DbEntities" connectionString="metadata=res://*/DbModel.csdl|res://*/DbModel.ssdl|res://*/DbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SPONGEBOB;initial catalog=Dalyan.Github;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+    <add name="DbEntities" connectionString="metadata=res://*/DbModel.csdl|res://*/DbModel.ssdl|res://*/DbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\SQLEXP2019;initial catalog=Dalyan.Database;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
